--- a/src/main/resources/templates/mentorship-posts/show.html
+++ b/src/main/resources/templates/mentorship-posts/show.html
@@ -37,16 +37,30 @@
                     <p class="m-r mb-0 userprint">Posted on: <span class="userinfo" th:text = "${post.dateTime}"></span> by <span class="userinfo" th:text="${post.user.username}"></span>    </p>
                                 <h1 th:text = "${post.title}"></h1>
                                 <p th:text = "${post.body}"></p>
-                            <div th:each="comment : ${post.commentList}">
-                                <div class="row">
-                                    <div class="col-1">
-                                        <i class="upvote-comment-button fas fa-arrow-up btn btn-link" th:id="'upvote-comment-' + ${comment.id}"> </i>
-                                        <p class="mb-0 ml-3"><span th:text = "${comment.getRatingTotal()}"></span></p>
-                                        <i class="downvote-comment-button fas fa-arrow-down btn btn-link" th:id="'downvote-comment-' + ${comment.id}"></i>
+                    <div th:each="comment : ${post.commentList}">
+                        <div class="row">
+                            <!--                                    THis is where the comment ratings are -->
+                            <div class="col-1">
+                                <i class="upvote-comment-button fas fa-arrow-up btn btn-link" th:id="'upvote-comment-' + ${comment.id}"> </i>
+                                <p class="mb-0 ml-3"><span th:text = "${comment.getRatingTotal()}"></span></p>
+                                <i class="downvote-comment-button fas fa-arrow-down btn btn-link" th:id="'downvote-comment-' + ${comment.id}"></i>
+                            </div>
+                            <!--                                    This is where the comment body goes-->
+                            <div class="col-11 align-self-center p- commentrow">
+                                <div class="media">
+                                    <img th:src="${comment.user.profileImageURL}" alt="profile"class="mr-3 rounded-circle" style="width:60px;">
+                                    <div class="media-body">
+                                        <p class="m-r mb-0 userprint">Posted on: <span class="userinfo" th:text = "${comment.dateTime}"></span> by <span class="userinfo" th:text="${comment.user.username}"></span></p>
+                                        <p class="mb-0" th:text = "${comment.body}" th:id="'comment-body-' + ${comment.id}"></p>
+                                        <div th:if="${user.id == comment.user.id}">
+                                            <div class="edit-comment-div" th:id="'edit-comment-div-' + ${comment.id}"></div>
+                                        </div>
                                     </div>
                                 </div>
+                                <hr>
                             </div>
                         </div>
+                    </div>
                         <div class="create-comment-div" th:id="'create-comment-div-' + ${post.id}"></div>
                         <button class="add-comment-button btn btn-link" th:id="'add-comment-button-' + ${post.id}">
                             Comment
