controller logic good to go. features are currently on the interview questions view. once agreed on and style will transfer to the other 3 flavors

--- a/src/main/resources/templates/interview-questions/show.html
+++ b/src/main/resources/templates/interview-questions/show.html
@@ -45,7 +45,8 @@
 <form class="form-inline my-2 my-lg-0">
     <input class="form-control mr-sm-2" type="search" name="searchString" placeholder="Search" aria-label="Search">
     <select class="custom-select" id="select-sort" name="by">
-        <option selected value="highestRating">Highest Rating</option>
+        <option selected disabled value="highestRating">Sort Results By</option>
+        <option value="highestRating">Highest Rating</option>
         <option value="lowestRating">Lowest Rating</option>
         <option value="titleAsc">Title Ascending</option>
         <option value="titleDesc">Title Descending</option>
