--- a/src/main/resources/templates/fragments/create-modals.html
+++ b/src/main/resources/templates/fragments/create-modals.html
@@ -20,30 +20,33 @@
                             <span aria-hidden="true">&times;</span>
                         </button>
                     </div>
-                    <div class="modal-body row" id="interview-questions-create-modal-body">
-                        <div>
-                            Title:
-                            <input name="interview-questions-title" id="interview-questions-title"/>
-                            <br/>
-                            Employer:
-                            <input name="interview-questions-employer" id="interview-questions-employer"/>
-                            <br/>
-                            Body:
-                            <input name="interview-questions-body" id="interview-questions-body"/>
-                            <br/>
-                            Answer:
-                            <input name="interview-questions-answer" id="interview-questions-answer"/>
-                            <br/>
-                            <button class="btn submit-button" id="interview-questions-submit-button" data-dismiss="modal">Submit</button>
+                            <div class="modal-body" id="interview-questions-create-modal-body">
+                                <div class="form-group">
+                                    <label for="interview-questions-title" class="col-form-label">What interview question were you asked:</label>
+                                    <input class="form-control" name="interview-questions-title" id="interview-questions-title"/>
+                                </div>
+                                <div class="form-group">
+                                     <label for="interview-questions-employer" class="col-form-label">Place you interviewed:</label>
+                                    <input class="form-control" name="interview-questions-employer" id="interview-questions-employer"/>
+                                </div>
+                                    <div class="form-group">
+                                        <label for="interview-questions-body" class="col-form-label">Subject(e.g. Java, Javascript):</label>
+                                        <input class="form-control" name="interview-questions-body" id="interview-questions-body"/>
+                                    </div>
+                                <div class="form-group">
+                                    <label for="interview-questions-answer" class="col-form-label">Whats the answer:</label>
+                                    <input class="form-control" name="interview-questions-answer" id="interview-questions-answer"/>
+                                </div>
+                                <div class="modal-footer">
+                                    <button class="btn btn-secondary submit-button" id="interview-questions-submit-button" data-dismiss="modal">Submit</button>
+                                    <!--                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>-->
+                                </div>
+                            </div>
                         </div>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                     </div>
                 </div>
             </div>
-        </div>
-    </div>
+
 <!--     Mentorship Create Modal -->
     <div th:if="${#httpServletRequest.requestURI.contains('mentorship-posts') || #httpServletRequest.requestURI.contains('users/dashboard')}">
         <div class="modal fade" id="mentorship-posts-create-modal" tabindex="-1" role="dialog"
@@ -51,24 +54,26 @@
              aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered modal-md" role="document">
                 <div class="modal-content">
-                    <div class="modal-header">
+                    <div class="modal-header text-center mb-0">
                         <h5 class="modal-title" id="mentorship-create-modal-title">Create Mentorship Post</h5>
+<!--                        not working out how i want it to -->
+<!--                        <p class="mb-0">Have an issue with your code or wanna share. Upload a screenshot of your code by clicking on the Upload button</p>-->
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                             <span aria-hidden="true">&times;</span>
                         </button>
                     </div>
-                    <div class="modal-body row" id="mentorship-posts-create-modal-body">
-                        <div>
-                            Title:
-                            <input name="mentorship-posts-title" id="mentorship-posts-title"/>
-                            <br/>
-                            Body/Question:
-                            <input name="mentorship-posts-body" id="mentorship-posts-body"/>
-                            <br/>
-                            <button class="button photo-upload" type="button" id="photo-picker">Upload An Image</button>
-                            <input type="hidden" class="mentorship-posts-photo-url" id="photo-upload" name="mentorship-posts-photo-url"/>
-                            <button class="btn submit-button" id="mentorship-posts-submit-button" data-dismiss="modal">Submit</button>
+                    <div class="modal-body" id="mentorship-posts-create-modal-body">
+                        <div class="form-group">
+                            <label for="mentorship-posts-title" class="col-form-label">Wanna pay it forward or need a mentors help</label>
+                            <input class="form-control" name="mentorship-posts-title" id="mentorship-posts-title"/>
                         </div>
+                        <div class="form-group">
+                            <label for="mentorship-posts-body" class="col-form-label">How can you mentor?/whats your question?:</label>
+                            <input class="form-control" name="mentorship-posts-body" id="mentorship-posts-body"/>
+                        </div>
+                            <button class="button btn btn-secondary photo-upload" type="button" id="photo-picker">Upload</button>
+                            <input type="hidden" class="mentorship-posts-photo-url" id="photo-upload" name="mentorship-posts-photo-url"/>
+                            <button class="btn btn-secondary submit-button" id="mentorship-posts-submit-button" data-dismiss="modal">Submit</button>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -90,19 +95,20 @@
                             <span aria-hidden="true">&times;</span>
                         </button>
                     </div>
-                    <div class="modal-body row" id="job-postings-create-modal-body">
-                        <div>
-                            Title:
-                            <input name="interview-questions-title" id="job-postings-title"/>
-                            <br/>
-                            Employer:
-                            <input name="interview-questions-employer" id="job-postings-employer"/>
-                            <br/>
-                            Body:
-                            <input name="interview-questions-body" id="job-postings-body"/>
-                            <br/>
-                            <button class="btn submit-button" id="job-postings-submit-button" data-dismiss="modal">Submit</button>
+                    <div class="modal-body" id="job-postings-create-modal-body">
+                        <div class="form-group">
+                            <label for="job-postings-title" class="col-form-label">Job-title:</label>
+                            <input class="form-control" name="job-postings-title" id="job-postings-title"/>
                         </div>
+                        <div class="form-group">
+                            <label for="job-postings-employer" class="col-form-label">Employer hiring:</label>
+                            <input class="form-control" name="job-postings-employer" id="job-postings-employer"/>
+                        </div>
+                        <div class="form-group">
+                            <label for="job-postings-body" class="col-form-label">Description of the job</label>
+                            <input class="form-control" name="job-postings-body" id="job-postings-body"/>
+                        </div>
+                            <button class="btn btn-secondary submit-button" id="job-postings-submit-button" data-dismiss="modal">Submit</button>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -124,22 +130,24 @@
                             <span aria-hidden="true">&times;</span>
                         </button>
                     </div>
-                    <div class="modal-body row" id="whiteboard-questions-create-modal-body">
-                        <div>
-                            Title:
-                            <input name="interview-questions-title" id="whiteboard-questions-title"/>
-                            <br/>
-                            Employer:
-                            <input name="interview-questions-employer" id="whiteboard-questions-employer"/>
-                            <br/>
-                            Body:
-                            <input name="interview-questions-body" id="whiteboard-questions-body"/>
-                            <br/>
-                            Answer:
-                            <input name="interview-questions-answer" id="whiteboard-questions-answer"/>
-                            <br/>
-                            <button class="btn submit-button" id="whiteboard-questions-submit-button" data-dismiss="modal">Submit</button>
+                    <div class="modal-body" id="whiteboard-questions-create-modal-body">
+                        <div class="form-group">
+                            <label for="whiteboard-questions-title" class="col-form-label">What did they ask you to whiteboard</label>
+                            <input class="form-control" name="whiteboard-questions-title" id="whiteboard-questions-title"/>
                         </div>
+                        <div class="form-group">
+                            <label for="whiteboard-questions-employer" class="col-form-label">Who was the employer:</label>
+                            <input class="form-control" name="whiteboard-questions-employer" id="whiteboard-questions-employer"/>
+                        </div>
+                        <div class="form-group">
+                            <label for="whiteboard-questions-body" class="col-form-label">What was the subject:</label>
+                            <input class="form-control" name="whiteboard-questions-body" id="whiteboard-questions-body"/>
+                        </div>
+                        <div class="form-group">
+                            <label for="whiteboard-questions-answer" class="col-form-label">How did you solve this:</label>
+                            <input class="form-control" name="whiteboard-questions-answer" id="whiteboard-questions-answer"/>
+                        </div>
+                            <button class="btn btn-secondary submit-button" id="whiteboard-questions-submit-button" data-dismiss="modal">Submit</button>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
