--- a/src/main/resources/templates/users/dashboard.html
+++ b/src/main/resources/templates/users/dashboard.html
@@ -322,9 +322,6 @@
         </div>
     </div>
 </div>
-
-
-
 <!--    End Mentorship-->
 <!--    Job-->
 <div class="row m-5">
@@ -403,6 +400,80 @@
     </div>
 </div>
 <!--    End Job-->
+<div class="row m-5">
+    <div class="col-3">
+        <!--        interview question description card-->
+        <div class="card text-center">
+            <div class="card-body">
+                <h3>Most Recent Whiteboard Questions</h3>
+                <p class="card-text">This page is connect within the CodeOn community and help one another. Whether it be studying, collaborating, needing a mentor or just a place to see how others experiences were. The mentorship page is the place to start. </p>
+                <button type="button" class="btn btn-link" data-toggle="modal" data-target="#inteviewModal">
+                    Interview Questions Create
+                </button>
+            </div>
+        </div>
+    </div>
+    <!--    comment card displaying info-->
+    <div class="col-9">
+        <div class="card mb-2">
+            <div class="card-body">
+                <div th:each="post : ${whiteboardPostingsList}">
+                    <div class="row">
+                        <div class="col-1">
+                            <i class="upvote-button fas fa-arrow-up btn btn-link"  th:id="'upvote-' + ${post.id}"></i>
+                            <p class="mb-0 ml-3">  <span th:text = "${post.getRatingTotal()}"></span></p>
+                            <i class="downvote-button fas fa-arrow-down btn btn-link" th:id="'downvote-' + ${post.id}"></i>
+                        </div>
+                        <div class="col-11">
+                            <div th:id="'post-' + ${post.id}">
+                                <p class="m-r mb-0 userprint">Posted on: <span class="userinfo" th:text = "${post.dateTime}"></span> by <span class="userinfo" th:text="${post.user.username}"></span></p>
+                                <h1 th:text = "${post.title}"></h1>
+                                <p th:text = "${post.body}"></p>
+                                <p class = "mb-0" th:text = "${post.answer}"></p>
+                                <hr>
+                                <div  th:if="${post.imageURLList.size() > 0 && post.imageURLList[0].url.length() > 8}" >
+                                    <img th:src="${post.imageURLList[0].url}" alt="post-image">
+                                </div>
+                            </div>
+                            <div th:each="comment : ${post.commentList}">
+                                <div class="row">
+                                    <!--                                    THis is where the comment ratings are -->
+                                    <div class="col-1">
+                                        <i class="upvote-comment-button fas fa-arrow-up btn btn-link" th:id="'upvote-comment-' + ${comment.id}"> </i>
+                                        <p class="mb-0 ml-3"><span th:text = "${comment.getRatingTotal()}"></span></p>
+                                        <i class="downvote-comment-button fas fa-arrow-down btn btn-link" th:id="'downvote-comment-' + ${comment.id}"></i>
+                                    </div>
+                                    <!--                                    This is where the comment body goes-->
+                                    <div class="col-11 align-self-center p- commentrow">
+                                        <div class="media">
+                                            <img th:src="${comment.user.profileImageURL}" alt="profile"class="mr-3 rounded-circle" style="width:60px;">
+                                            <div class="media-body">
+                                                <p class="m-r mb-0 userprint">Posted on: <span class="userinfo" th:text = "${comment.dateTime}"></span> by <span class="userinfo" th:text="${comment.user.username}"></span></p>
+                                                <p class="mb-0" th:text = "${comment.body}" th:id="'comment-body-' + ${comment.id}"></p>
+                                                <div th:if="${user.id == comment.user.id}">
+                                                    <div class="edit-comment-div" th:id="'edit-comment-div-' + ${comment.id}"></div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <hr>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="create-comment-div" th:id="'create-comment-div-' + ${post.id}"></div>
+                            <button class="add-comment-button btn btn-link" th:id="'add-comment-button-' + ${post.id}">Comment</button>
+                            <div th:if="${user.id == post.user.id}">
+                                <a th:href="@{|/whiteboard-questions/edit/${post.id}|}"><button>Edit my post</button></a>
+                                <button class="delete-button" th:id="${post.postType.type} + '-' + ${post.id}">Delete my Post</button>
+                            </div>
+                        </div>
+                    </div>
+                    <hr>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 
 <!--container div-->
 <!--</div>-->
