styled banners on each page

--- a/src/main/resources/templates/interview-questions/show.html
+++ b/src/main/resources/templates/interview-questions/show.html
@@ -14,7 +14,7 @@
 
     <!--    PROFILE CARD    -->
     <div class="card p-5 mt-5 blue-font" id="profile-card">
-        <h2 class="card-title text-center p-3 profile-header">Interview</h2>
+        <h2 class="display-1 card-title text-center p-3 profile-header">Interview</h2>
         <div class="card-text media">
 
         </div>
