--- a/src/main/resources/templates/job-postings/show.html
+++ b/src/main/resources/templates/job-postings/show.html
@@ -12,7 +12,7 @@
 <div class="container profile-container">
     <!--    PROFILE CARD    -->
     <div class="card p-5 mt-5 blue-font" id="profile-card">
-        <h2 class="card-title text-center p-3 profile-header">Jobs</h2>
+        <h2 class="display-1 card-title text-center p-3 profile-header">Jobs</h2>
         <p></p>
         <p class="align-self-end profile-btns">
             <!--                maybe add some buttons to the front-->
