--- a/src/main/resources/templates/users/dashboard.html
+++ b/src/main/resources/templates/users/dashboard.html
@@ -19,7 +19,7 @@
             </div>
             <div class="card-body">
                 <h4>Welcome, <span th:text="${user.username}">user</span>!</h4>
-                <p class="mb-0">take me to the most recent:</p>
+                <p class="font-weight-bold mb-0">take me to the most recent:</p>
                 <a class="takeme" href="#interview-questions">Interview questions</a>
                 <a class="takethem" href="#mentorship-post">Mentorship Post</a>
                 <a class="takethem" href="#job-posting">Job Postings</a>
@@ -183,9 +183,9 @@
             <div class="card-body">
                 <h3>Most Recent Interview Questions</h3>
                 <p class="card-text">This page is connect within the CodeOn community and help one another. Whether it be studying, collaborating, needing a mentor or just a place to see how others experiences were. The mentorship page is the place to start. </p>
-                <button type="button" class="btn btn-link" data-toggle="modal" data-target="#inteviewModal">
-                    Interview Questions Create
-                </button>
+<!--                <button type="button" class="btn btn-link" data-toggle="modal" data-target="#inteviewModal">-->
+<!--                    Interview Questions Create-->
+<!--                </button>-->
             </div>
         </div>
     </div>
@@ -261,9 +261,9 @@
             <div class="card-body">
                 <h3 class ="fancy-header">Most Recent Mentorship Posts</h3>
                 <p class="card-text">This page is connect within the CodeOn community and help one another. Whether it be studying, collaborating, needing a mentor or just a place to see how others experiences were. The mentorship page is the place to start. </p>
-                <button type="button" class="btn btn-link" data-toggle="modal" data-target="#mentorshipModal">
-                    Mentorship Create
-                </button>
+<!--                <button type="button" class="btn btn-link" data-toggle="modal" data-target="#mentorshipModal">-->
+<!--                    Mentorship Create-->
+<!--                </button>-->
             </div>
         </div>
     </div>
@@ -338,9 +338,9 @@
             <div class="card-body">
                 <h3 class ="fancy-header">Most Recent Job Postings</h3>
                 <p class="card-text">This page is for future developers to get ahead on the job front. Here as Alumni we can see if there are any openings at our place of employment and help future or current grads know of any positions open in the area</p>
-                <button type="button" class="btn btn-link" data-toggle="modal" data-target="#jobsModal">
-                    Job Postings Create
-                </button>
+<!--                <button type="button" class="btn btn-link" data-toggle="modal" data-target="#jobsModal">-->
+<!--                    Job Postings Create-->
+<!--                </button>-->
             </div>
         </div>
     </div>
@@ -415,10 +415,9 @@
             <div class="card-body">
                 <h3>Most Recent Whiteboard Questions</h3>
                 <p class="card-text">This page is connect within the CodeOn community and help one another. Whether it be studying, collaborating, needing a mentor or just a place to see how others experiences were. The mentorship page is the place to start. </p>
-
-                <button type="button" class="btn btn-link" data-toggle="modal" data-target="#inteviewModal">
-                    Interview Questions Create
-                </button>
+<!--                <button type="button" class="btn btn-link" data-toggle="modal" data-target="#inteviewModal">-->
+<!--                    Interview Questions Create-->
+<!--                </button>-->
             </div>
         </div>
     </div>
