--- a/src/main/resources/templates/mentorship-posts/show.html
+++ b/src/main/resources/templates/mentorship-posts/show.html
@@ -12,7 +12,7 @@
 
     <!--    PROFILE CARD    -->
     <div class="card p-5 mt-5 blue-font" id="profile-card">
-        <h1 class="card-title text-center p-3 profile-header">Mentorship</h1>
+        <h1 class="display-1 card-title text-center p-3 profile-header">Mentorship</h1>
         <div class="card-text media">
             <p>We as a </p>
         </div>
