--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -18,7 +18,7 @@ button{
     background: none;
     border: none;
 }
-h1,h2,h3,h4{
+h1,h2,h3,h4,h5{
     font-family: 'Montserrat', sans-serif;
 }
 p{
@@ -89,6 +89,22 @@ body, html {
     margin: 5px 5px;
     padding-top: 3px;
     padding-bottom: 5px;
+}
+
+.start-button, .show-answer-button, .next-question-button {
+    text-align: center;
+    color: #E3E7D3;
+    font-size: 20px;
+    border: 2px solid #E3E7D3;
+    border-radius: 3px;
+    background-color: #0f6674;
+    margin: 20px 10px;
+    padding-top: 3px;
+    padding-bottom: 5px;
+}
+
+.question-round-container {
+    width: 100vw;
 }
 
 a:hover {
