used my pic as a placeholder just add your img

--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -199,6 +199,9 @@ header {
     width: 190px;
     font-size: 100px;
 }
+.aboutus{
+    margin-top: 15%;
+}
 
 @media only screen and (max-width: 600px) {
 .parallax2{
