--- a/src/main/resources/templates/about-us.html
+++ b/src/main/resources/templates/about-us.html
@@ -3,7 +3,54 @@
 <head th:replace="fragments/header.html :: header(title = 'About Us')">
 </head>
 <body>
-<h1>testing</h1>
+<section class="jumbotron text-center">
+    <div class="container">
+
+    </div>
+</section>
+<div class="container">
+    <div class="row">
+        <div class="col-md-4">
+            <div class="card mb-4 box-shadow">
+                <img class="card-img-top" th:src="@{~/img/noland-seigler-headshot.jpg}" data-holder-rendered="true">
+                <div class="card-body">
+                    <p class="card-text">Noland Seigler</p>
+                    <div class="d-flex justify-content-between align-items-center">
+                        <a href="https://github.com/nolandseigler"><i class="fab fa-github fa-2x hover-blue"></i></a>
+                        <a href="https://www.linkedin.com/in/noland-seigler/"><i class="fab fa-linkedin fa-2x hover-blue"></i></a>
+                        <a href="https://alumni.codeup.com/students/780"><i class="fas fa-graduation-cap fa-2x hover-blue"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="card box-shadow">
+                <img class="card-img-top" th:src="@{~/img/ruben-montanez-headshot.jpg}" data-holder-rendered="true">
+                <div class="card-body">
+                    <p class="card-text">Ruben Montanez</p>
+                    <div class="d-flex justify-content-between align-items-center">
+                        <a href="https://github.com/Rubenamontanez"><i class="fab fa-github fa-2x hover-blue"></i></a>
+                        <a href="https://www.linkedin.com/in/ruben-montanez-4153831a2/"><i class="fab fa-linkedin fa-2x hover-blue"></i></a>
+                        <a href="https://alumni.codeup.com/students/778"><i class="fas fa-graduation-cap fa-2x hover-blue"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="card mb-4 box-shadow">
+                <img class="card-img-top" th:src="@{~/img/william-stephens-headshot.jpg}" data-holder-rendered="true">
+                <div class="card-body">
+                    <p class="card-text">Will Stephens</p>
+                    <div class="d-flex justify-content-between align-items-center">
+                        <a href="https://github.com/willstep17"><i class="fab fa-github fa-2x hover-blue"></i></a>
+                        <a href="https://www.linkedin.com/in/willstep17/"><i class="fab fa-linkedin fa-2x hover-blue"></i></a>
+                        <a href="https://alumni.codeup.com/students/790"><i class="fas fa-graduation-cap fa-2x hover-blue"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 <div th:replace="fragments/body-scripts.html :: body-scripts"></div>
 </body>
 </html>
