--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -221,12 +221,12 @@ header {
 }
 .show-chat-modal-button {
     position: fixed;
-    right: 0;
+    right: 4rem;
     border: 0;
     z-index: 50000;
-    bottom: 77px;
-    width: 190px;
-    font-size: 100px;
+    bottom: 2rem;
+    width: 3rem;
+    font-size: 3rem;
 }
 .aboutus {
     margin-top: 15%;
